# bachelors-thesis

./: .pre-commit-config.yaml  README.md  adv-pipe.md  advpipe-lock.yml  ideas.md  next_steps.md  notes.md  pyproject.toml  requirements.txt  review_paper_notes.md  setup.cfg  setup.py
advpipe/language_model/: label_classification.py
bp/: intro.md
bp/en/: .gitignore  01_introduction.tex  02_preliminaries.tex  03_related_work.tex  Makefile  bibliography.bib  chap01.tex  preface.tex  thesis.tex  thesis.xmpdata
src/advpipe/: .gitignore  __init__.py  advpipe_attack.py  data_loader.py  log.py  logging.conf  run_all_experiments.sh  run_overnight.sh  types.py  utils.py
src/advpipe/attack_algorithms/: __init__.py  adam_pgd.py  apgd_auto_attack.py  cw_attack.py  fgsm.py  passthrough_attack.py  random_attack.py  rays.py  square_attack.py  square_auto_attack.py
src/advpipe/attack_config/: apgd.yaml  apgd_augment.yaml  apgd_augment_elastic.yaml  apgd_early_stopping.yaml  apgd_early_stopping_l2.yaml  apgd_early_stopping_linf.yaml  apgd_n_iters_exp.yaml  augment_affine.yaml  augment_blur_sample.yaml  augment_noise_sample.yaml  damagenet_transfer_gvision.yaml  damagenet_transfer_resnet18.yaml  damagenet_transfer_resnet50.yaml  ensemble_elastic.yaml  ensemble_elastic_noise_blur.yaml  ensemble_exp.yaml  fgsm_gridsearch.yaml  fgsm_resnet18.yaml  imagenet_val_baseline.yaml  imagenet_val_baseline_efficientnet_b0.yaml  imagenet_val_baseline_efficientnet_b0_advtrain.yaml  imagenet_val_baseline_gvision.yaml  imagenet_val_baseline_resnet18.yaml  imagenet_val_baseline_resnet50.yaml  net_crossproduct.yaml  net_crossproduct_apgd.yaml  net_crossproduct_apgd_surrogate_outputmap_logits.yaml  net_crossproduct_apgd_surrogate_outputmap_margin.yaml  net_crossproduct_fgsm.yaml  noise_correct_sampling.yaml  noise_eot_iter_exp.yaml  simple_iterative_attack.yaml  square_attack_efficientnet_b0.yaml  square_attack_efficientnet_b0_1000_iters.yaml  square_attack_efficientnet_b0_advtrained.yaml  square_attack_resnet18.yaml  square_attack_resnet50.yaml  square_attack_transfer_resnet18_to_gvision.yaml  square_attack_transfer_resnet18_to_resnet50.yaml  square_attack_transfer_resnet50_to_gvision.yaml  (+4 more)
src/advpipe/attack_regimes/: __init__.py  simple_iterative_regime.py  simple_transfer_regime.py  transfer_regime_multiple_targets.py
src/advpipe/attacks/: __init__.py  simple_iterative_attack.py
tests/: test_logging.py  test_organism_label_classifier.py
thesis-tex/en/: 02_preliminaries.tex  abstract.xmpdata  build.sh  intro.md
thesis-text/: review_paper_notes.md
thesis-text/en/: 01_introduction.tex  02_preliminaries.tex  03_related_work.tex  04_our_approach.tex  05_experiments.tex  06_future_work.tex  Makefile  abstract.tex  attachments.tex  bibliography.bib  build.sh  epilog.tex  figures  macros.tex  results  scripts  thesis.tex
(+7960 files in other folders)
